syntax = "proto3";

package file;

import "common.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.nitb.fileservice.grpc";
option java_outer_classname = "FileProto";

message UploadFileRequest {
  string folder_path = 1;
  string public_id = 2;
  bytes file = 3;
}

message FileResponse {
  string url = 1;
}

message MoveFileRequest {
  string public_id = 1;
  string to_folder = 2;
  string new_public_id = 3;
}

message DeleteFileRequest {
  string public_id = 1;
}

service FileService {
  rpc UploadFile(UploadFileRequest) returns (FileResponse);
  rpc MoveFile(MoveFileRequest) returns (google.protobuf.Empty);
  rpc DeleteFile(DeleteFileRequest) returns (common.ActionResponse);
}